--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "6.4.0" 
+    "node": "6.4.0"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
     "firebase-admin": "^4.0.4",
     "lodash": "^4.17.4",
     "quiver-firebase-search": "^1.0.4"
+  },
+  "devDependencies": {
+    "jasmine": "^2.5.3"
   }
 }
